Atualização apos tentar salvar git

--- a/ForretasAPITester/appsettings.json
+++ b/ForretasAPITester/appsettings.json
@@ -10,7 +10,9 @@
   "ConnectionStrings": {
     "ForretasDBContext": "Data Source=85.93.91.30;Database=ForretasDEV;Uid=basesdados;Password=basesdados06252019;Max Pool Size=50000;Pooling=True;"
   },
+  //Rota para consumir a API
   "API": {
-    "BaseURL": "https://localhost:5009"
+    "BaseURL": "http://comparadorapi.forretas.tk"
+    //"BaseURL": "https://localhost:44323"
   }
 }
