--- a/ForretasAPITester/appsettings.Development.json
+++ b/ForretasAPITester/appsettings.Development.json
@@ -12,6 +12,6 @@
   },
   "API": {
     //"BaseURL": "https://localhost:44323"
-    "BaseURL": "http://comparadorapi.forretas.tk"
+    "BaseURL": "http://apiqualidade.forretas.com"
   }
 }
