--- a/ForretasAPITester/appsettings.json
+++ b/ForretasAPITester/appsettings.json
@@ -12,7 +12,7 @@
   },
   //Rota para consumir a API
   "API": {
-    "BaseURL": "http://comparadorapi.forretas.tk"
+    "BaseURL": "http://apiqualidade.forretas.com"
     //"BaseURL": "https://localhost:44323"
   }
 }
